// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonCircleToggle /> snapshot should match snapshot 1`] = `
<div>
  <mdc-button
    class="md-button-circle-toggle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  />
</div>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with ariaStateKey being 'aria-expanded' and isSelected being false 1`] = `
<div>
  <mdc-button
    aria-expanded="false"
    ariastatekey="aria-expanded"
    class="md-button-circle-toggle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  />
</div>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with ariaStateKey being 'aria-expanded' and isSelected being true 1`] = `
<div>
  <mdc-button
    active=""
    aria-expanded="true"
    ariastatekey="aria-expanded"
    class="md-button-circle-toggle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  />
</div>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with isSelected being false 1`] = `
<div>
  <mdc-button
    aria-pressed="false"
    ariastatekey="aria-pressed"
    class="md-button-circle-toggle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  />
</div>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with isSelected being true 1`] = `
<div>
  <mdc-button
    active=""
    aria-pressed="true"
    ariastatekey="aria-pressed"
    class="md-button-circle-toggle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  />
</div>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with outline being false 1`] = `
<div>
  <mdc-button
    class="md-button-circle-toggle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  />
</div>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with outline being true 1`] = `
<div>
  <mdc-button
    class="md-button-circle-toggle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="secondary"
  />
</div>
`;
